--- a/1.0 Image collection.ipynb
+++ b/1.0 Image collection.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,7 +30,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -52,7 +50,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -93,7 +90,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,7 +97,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -160,7 +155,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -183,8 +177,8 @@
     "w = h = frameHeight  # width and height of the crop\n",
     "\n",
     "# Set the desired image width and height\n",
-    "imgWidth = 256\n",
-    "imgHeight = 256\n",
+    "imgWidth = 320\n",
+    "imgHeight = 320\n",
     "\n",
     "# set timer countdown\n",
     "TIMER = int(4)\n",
@@ -295,7 +289,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -304,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +305,53 @@
      "output_type": "stream",
      "text": [
       "Collecting images for thumbsup\n",
-      "Press 'r' to start image collection for thumbsup\n"
+      "Press 'r' to start image collection for thumbsup\n",
+      "Collecting image number 1\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.a19170e7-c2d9-11ed-83cc-44af2861d338.jpg\n",
+      "Collecting image number 2\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.a4be32cf-c2d9-11ed-8df0-44af2861d338.jpg\n",
+      "Collecting image number 3\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.a7eb0504-c2d9-11ed-abfa-44af2861d338.jpg\n",
+      "Collecting image number 4\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.ab151dd7-c2d9-11ed-8b3c-44af2861d338.jpg\n",
+      "Collecting image number 5\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.ae4218dc-c2d9-11ed-ae3a-44af2861d338.jpg\n",
+      "Collecting images for thumbsdown\n",
+      "Press 'r' to start image collection for thumbsdown\n",
+      "Collecting image number 1\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\thumbsdown\\thumbsdown.b8b11997-c2d9-11ed-be73-44af2861d338.jpg\n",
+      "Collecting image number 2\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\thumbsdown\\thumbsdown.bbd72d13-c2d9-11ed-a29a-44af2861d338.jpg\n",
+      "Collecting image number 3\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\thumbsdown\\thumbsdown.bef3a66f-c2d9-11ed-ad54-44af2861d338.jpg\n",
+      "Collecting image number 4\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\thumbsdown\\thumbsdown.c2101978-c2d9-11ed-9c81-44af2861d338.jpg\n",
+      "Collecting image number 5\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\thumbsdown\\thumbsdown.c52afd56-c2d9-11ed-9d1d-44af2861d338.jpg\n",
+      "Collecting images for thankyou\n",
+      "Press 'r' to start image collection for thankyou\n",
+      "Collecting image number 1\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\thankyou\\thankyou.cbe118c6-c2d9-11ed-9498-44af2861d338.jpg\n",
+      "Collecting image number 2\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\thankyou\\thankyou.cf10edea-c2d9-11ed-8d86-44af2861d338.jpg\n",
+      "Collecting image number 3\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\thankyou\\thankyou.d2344614-c2d9-11ed-808a-44af2861d338.jpg\n",
+      "Collecting image number 4\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\thankyou\\thankyou.d565868f-c2d9-11ed-b2f6-44af2861d338.jpg\n",
+      "Collecting image number 5\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\thankyou\\thankyou.d8818e4e-c2d9-11ed-bd24-44af2861d338.jpg\n",
+      "Collecting images for livelong\n",
+      "Press 'r' to start image collection for livelong\n",
+      "Collecting image number 1\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\livelong\\livelong.dee6de10-c2d9-11ed-a0f6-44af2861d338.jpg\n",
+      "Collecting image number 2\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\livelong\\livelong.e22426fd-c2d9-11ed-b77e-44af2861d338.jpg\n",
+      "Collecting image number 3\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\livelong\\livelong.e53ddbe0-c2d9-11ed-93c8-44af2861d338.jpg\n",
+      "Collecting image number 4\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\livelong\\livelong.e867d8af-c2d9-11ed-9d1a-44af2861d338.jpg\n",
+      "Collecting image number 5\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\livelong\\livelong.eb8f4e23-c2d9-11ed-90ee-44af2861d338.jpg\n"
      ]
     }
    ],
@@ -327,8 +366,8 @@
     "w = h = frameHeight  # width and height of the crop\n",
     "\n",
     "# Set the desired image width and height\n",
-    "imgWidth = 256\n",
-    "imgHeight = 256\n",
+    "imgWidth = 320\n",
+    "imgHeight = 320\n",
     "\n",
     "# Initialize a video capture object with the default camera (index 0)\n",
     "cap = cv2.VideoCapture(0)\n",
@@ -474,7 +513,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -483,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,18 +553,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image:E:\\DS\\tfod-01\\Tensorflow\\workspace\\images\\collectedimages\\livelong\\livelong.7e74ec7c-c26b-11ed-a230-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensorflow/workspace/images/collectedimages/livelong\\livelong.7e74ec7c-c26b-11ed-a230-44af2861d338.xml\n",
-      "Image:E:\\DS\\tfod-01\\Tensorflow\\workspace\\images\\collectedimages\\livelong\\livelong.8b0d0188-c26b-11ed-af84-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensorflow/workspace/images/collectedimages/livelong\\livelong.8b0d0188-c26b-11ed-af84-44af2861d338.xml\n",
-      "Image:E:\\DS\\tfod-01\\Tensorflow\\workspace\\images\\collectedimages\\livelong\\livelong.81a80104-c26b-11ed-b911-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensorflow/workspace/images/collectedimages/livelong\\livelong.81a80104-c26b-11ed-b911-44af2861d338.xml\n",
-      "Image:E:\\DS\\tfod-01\\Tensorflow\\workspace\\images\\collectedimages\\livelong\\livelong.84d56728-c26b-11ed-8b6b-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensorflow/workspace/images/collectedimages/livelong\\livelong.84d56728-c26b-11ed-8b6b-44af2861d338.xml\n",
-      "Image:E:\\DS\\tfod-01\\Tensorflow\\workspace\\images\\collectedimages\\livelong\\livelong.87f610fe-c26b-11ed-a74f-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensorflow/workspace/images/collectedimages/livelong\\livelong.87f610fe-c26b-11ed-a74f-44af2861d338.xml\n"
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.a4be32cf-c2d9-11ed-8df0-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/thumbsup\\thumbsup.a4be32cf-c2d9-11ed-8df0-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.a7eb0504-c2d9-11ed-abfa-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/thumbsup\\thumbsup.a7eb0504-c2d9-11ed-abfa-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.a19170e7-c2d9-11ed-83cc-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/thumbsup\\thumbsup.a19170e7-c2d9-11ed-83cc-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.ab151dd7-c2d9-11ed-8b3c-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/thumbsup\\thumbsup.ab151dd7-c2d9-11ed-8b3c-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.ae4218dc-c2d9-11ed-ae3a-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/thumbsup\\thumbsup.ae4218dc-c2d9-11ed-ae3a-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\thumbsdown\\thumbsdown.b8b11997-c2d9-11ed-be73-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/thumbsdown\\thumbsdown.b8b11997-c2d9-11ed-be73-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\thumbsdown\\thumbsdown.bbd72d13-c2d9-11ed-a29a-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/thumbsdown\\thumbsdown.bbd72d13-c2d9-11ed-a29a-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\thumbsdown\\thumbsdown.bef3a66f-c2d9-11ed-ad54-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/thumbsdown\\thumbsdown.bef3a66f-c2d9-11ed-ad54-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\thumbsdown\\thumbsdown.c52afd56-c2d9-11ed-9d1d-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/thumbsdown\\thumbsdown.c52afd56-c2d9-11ed-9d1d-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\thumbsdown\\thumbsdown.c2101978-c2d9-11ed-9c81-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/thumbsdown\\thumbsdown.c2101978-c2d9-11ed-9c81-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\thankyou\\thankyou.cbe118c6-c2d9-11ed-9498-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/thankyou\\thankyou.cbe118c6-c2d9-11ed-9498-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\thankyou\\thankyou.cf10edea-c2d9-11ed-8d86-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/thankyou\\thankyou.cf10edea-c2d9-11ed-8d86-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\thankyou\\thankyou.d8818e4e-c2d9-11ed-bd24-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/thankyou\\thankyou.d8818e4e-c2d9-11ed-bd24-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\thankyou\\thankyou.d565868f-c2d9-11ed-b2f6-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/thankyou\\thankyou.d565868f-c2d9-11ed-b2f6-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\thankyou\\thankyou.d2344614-c2d9-11ed-808a-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/thankyou\\thankyou.d2344614-c2d9-11ed-808a-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\livelong\\livelong.dee6de10-c2d9-11ed-a0f6-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/livelong\\livelong.dee6de10-c2d9-11ed-a0f6-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\livelong\\livelong.e53ddbe0-c2d9-11ed-93c8-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/livelong\\livelong.e53ddbe0-c2d9-11ed-93c8-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\livelong\\livelong.e867d8af-c2d9-11ed-9d1a-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/livelong\\livelong.e867d8af-c2d9-11ed-9d1a-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\livelong\\livelong.e22426fd-c2d9-11ed-b77e-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/livelong\\livelong.e22426fd-c2d9-11ed-b77e-44af2861d338.xml\n",
+      "Image:E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\livelong\\livelong.eb8f4e23-c2d9-11ed-90ee-44af2861d338.jpg -> Annotation:E:/DS/tfod-01/Tensortflow_object_detection-01/Tensorflow/workspace/images/collectedimages/livelong\\livelong.eb8f4e23-c2d9-11ed-90ee-44af2861d338.xml\n"
      ]
     }
    ],
@@ -545,7 +598,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ds-c-tfod-01",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -560,9 +613,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.9"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
