--- a/3.0 test.ipynb
+++ b/3.0 test.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,17 +316,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully created train_labels.csv and test_labels.csv in Tensorflow\\workspace\\annotations\n",
-      "Successfully created the Tensorflow\\workspace\\annotations\\train.record file\n",
-      "Successfully created the Tensorflow\\workspace\\annotations\\test.record file\n",
-      "Successfully created train.record and test.record in Tensorflow\\workspace\\annotations\n"
+      "Warning: Missing values found in the 'relative_path' column:\n",
+      "                                             filename  ...  relative_path\n",
+      "0   livelong.e22426fd-c2d9-11ed-b77e-44af2861d338.jpg  ...            NaN\n",
+      "1   livelong.e53ddbe0-c2d9-11ed-93c8-44af2861d338.jpg  ...            NaN\n",
+      "2   livelong.e867d8af-c2d9-11ed-9d1a-44af2861d338.jpg  ...            NaN\n",
+      "3   livelong.eb8f4e23-c2d9-11ed-90ee-44af2861d338.jpg  ...            NaN\n",
+      "4   thankyou.cbe118c6-c2d9-11ed-9498-44af2861d338.jpg  ...            NaN\n",
+      "5   thankyou.cf10edea-c2d9-11ed-8d86-44af2861d338.jpg  ...            NaN\n",
+      "6   thankyou.d2344614-c2d9-11ed-808a-44af2861d338.jpg  ...            NaN\n",
+      "7   thankyou.d8818e4e-c2d9-11ed-bd24-44af2861d338.jpg  ...            NaN\n",
+      "8   thumbsdown.bbd72d13-c2d9-11ed-a29a-44af2861d33...  ...            NaN\n",
+      "9   thumbsdown.bef3a66f-c2d9-11ed-ad54-44af2861d33...  ...            NaN\n",
+      "10  thumbsdown.c2101978-c2d9-11ed-9c81-44af2861d33...  ...            NaN\n",
+      "11  thumbsdown.c52afd56-c2d9-11ed-9d1d-44af2861d33...  ...            NaN\n",
+      "12  thumbsup.a19170e7-c2d9-11ed-83cc-44af2861d338.jpg  ...            NaN\n",
+      "13  thumbsup.a4be32cf-c2d9-11ed-8df0-44af2861d338.jpg  ...            NaN\n",
+      "14  thumbsup.ab151dd7-c2d9-11ed-8b3c-44af2861d338.jpg  ...            NaN\n",
+      "15  thumbsup.ae4218dc-c2d9-11ed-ae3a-44af2861d338.jpg  ...            NaN\n",
+      "\n",
+      "[16 rows x 9 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"e:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\scripts\\xml_to_tfrecord.py\", line 175, in <module>\n",
+      "    generate_tfrecords(args.train_image_dir, os.path.join(args.output_dir, 'train_labels.csv'), os.path.join(args.output_dir, 'train.record'))\n",
+      "  File \"e:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\scripts\\xml_to_tfrecord.py\", line 143, in generate_tfrecords\n",
+      "    group_data = grouped.get_group(group_keys) if not pd.isna(group_keys[1]) else grouped.get_group((group_keys[0],))\n",
+      "  File \"C:\\Users\\Imran\\.conda\\envs\\ds-c-tfod-01\\lib\\site-packages\\pandas\\core\\groupby\\groupby.py\", line 817, in get_group\n",
+      "    raise KeyError(name)\n",
+      "KeyError: ('livelong.e22426fd-c2d9-11ed-b77e-44af2861d338.jpg',)\n"
      ]
     }
    ],
@@ -336,17 +366,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tensorflow\\workspace\\annotations\\label_map.pbtxt\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(files['LABELMAP'])"
    ]
@@ -360,17 +389,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        1 file(s) copied.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if os.name =='posix':\n",
     "    !cp {os.path.join(paths['PRETRAINED_MODEL_PATH'], PRETRAINED_MODEL_NAME, 'pipeline.config')} {os.path.join(paths['CHECKPOINT_PATH'])}\n",
@@ -387,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,214 +429,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'model': ssd {\n",
-       "   num_classes: 90\n",
-       "   image_resizer {\n",
-       "     fixed_shape_resizer {\n",
-       "       height: 320\n",
-       "       width: 320\n",
-       "     }\n",
-       "   }\n",
-       "   feature_extractor {\n",
-       "     type: \"ssd_mobilenet_v2_fpn_keras\"\n",
-       "     depth_multiplier: 1.0\n",
-       "     min_depth: 16\n",
-       "     conv_hyperparams {\n",
-       "       regularizer {\n",
-       "         l2_regularizer {\n",
-       "           weight: 3.9999998989515007e-05\n",
-       "         }\n",
-       "       }\n",
-       "       initializer {\n",
-       "         random_normal_initializer {\n",
-       "           mean: 0.0\n",
-       "           stddev: 0.009999999776482582\n",
-       "         }\n",
-       "       }\n",
-       "       activation: RELU_6\n",
-       "       batch_norm {\n",
-       "         decay: 0.996999979019165\n",
-       "         scale: true\n",
-       "         epsilon: 0.0010000000474974513\n",
-       "       }\n",
-       "     }\n",
-       "     use_depthwise: true\n",
-       "     override_base_feature_extractor_hyperparams: true\n",
-       "     fpn {\n",
-       "       min_level: 3\n",
-       "       max_level: 7\n",
-       "       additional_layer_depth: 128\n",
-       "     }\n",
-       "   }\n",
-       "   box_coder {\n",
-       "     faster_rcnn_box_coder {\n",
-       "       y_scale: 10.0\n",
-       "       x_scale: 10.0\n",
-       "       height_scale: 5.0\n",
-       "       width_scale: 5.0\n",
-       "     }\n",
-       "   }\n",
-       "   matcher {\n",
-       "     argmax_matcher {\n",
-       "       matched_threshold: 0.5\n",
-       "       unmatched_threshold: 0.5\n",
-       "       ignore_thresholds: false\n",
-       "       negatives_lower_than_unmatched: true\n",
-       "       force_match_for_each_row: true\n",
-       "       use_matmul_gather: true\n",
-       "     }\n",
-       "   }\n",
-       "   similarity_calculator {\n",
-       "     iou_similarity {\n",
-       "     }\n",
-       "   }\n",
-       "   box_predictor {\n",
-       "     weight_shared_convolutional_box_predictor {\n",
-       "       conv_hyperparams {\n",
-       "         regularizer {\n",
-       "           l2_regularizer {\n",
-       "             weight: 3.9999998989515007e-05\n",
-       "           }\n",
-       "         }\n",
-       "         initializer {\n",
-       "           random_normal_initializer {\n",
-       "             mean: 0.0\n",
-       "             stddev: 0.009999999776482582\n",
-       "           }\n",
-       "         }\n",
-       "         activation: RELU_6\n",
-       "         batch_norm {\n",
-       "           decay: 0.996999979019165\n",
-       "           scale: true\n",
-       "           epsilon: 0.0010000000474974513\n",
-       "         }\n",
-       "       }\n",
-       "       depth: 128\n",
-       "       num_layers_before_predictor: 4\n",
-       "       kernel_size: 3\n",
-       "       class_prediction_bias_init: -4.599999904632568\n",
-       "       share_prediction_tower: true\n",
-       "       use_depthwise: true\n",
-       "     }\n",
-       "   }\n",
-       "   anchor_generator {\n",
-       "     multiscale_anchor_generator {\n",
-       "       min_level: 3\n",
-       "       max_level: 7\n",
-       "       anchor_scale: 4.0\n",
-       "       aspect_ratios: 1.0\n",
-       "       aspect_ratios: 2.0\n",
-       "       aspect_ratios: 0.5\n",
-       "       scales_per_octave: 2\n",
-       "     }\n",
-       "   }\n",
-       "   post_processing {\n",
-       "     batch_non_max_suppression {\n",
-       "       score_threshold: 9.99999993922529e-09\n",
-       "       iou_threshold: 0.6000000238418579\n",
-       "       max_detections_per_class: 100\n",
-       "       max_total_detections: 100\n",
-       "       use_static_shapes: false\n",
-       "     }\n",
-       "     score_converter: SIGMOID\n",
-       "   }\n",
-       "   normalize_loss_by_num_matches: true\n",
-       "   loss {\n",
-       "     localization_loss {\n",
-       "       weighted_smooth_l1 {\n",
-       "       }\n",
-       "     }\n",
-       "     classification_loss {\n",
-       "       weighted_sigmoid_focal {\n",
-       "         gamma: 2.0\n",
-       "         alpha: 0.25\n",
-       "       }\n",
-       "     }\n",
-       "     classification_weight: 1.0\n",
-       "     localization_weight: 1.0\n",
-       "   }\n",
-       "   encode_background_as_zeros: true\n",
-       "   normalize_loc_loss_by_codesize: true\n",
-       "   inplace_batchnorm_update: true\n",
-       "   freeze_batchnorm: false\n",
-       " },\n",
-       " 'train_config': batch_size: 128\n",
-       " data_augmentation_options {\n",
-       "   random_horizontal_flip {\n",
-       "   }\n",
-       " }\n",
-       " data_augmentation_options {\n",
-       "   random_crop_image {\n",
-       "     min_object_covered: 0.0\n",
-       "     min_aspect_ratio: 0.75\n",
-       "     max_aspect_ratio: 3.0\n",
-       "     min_area: 0.75\n",
-       "     max_area: 1.0\n",
-       "     overlap_thresh: 0.0\n",
-       "   }\n",
-       " }\n",
-       " sync_replicas: true\n",
-       " optimizer {\n",
-       "   momentum_optimizer {\n",
-       "     learning_rate {\n",
-       "       cosine_decay_learning_rate {\n",
-       "         learning_rate_base: 0.07999999821186066\n",
-       "         total_steps: 50000\n",
-       "         warmup_learning_rate: 0.026666000485420227\n",
-       "         warmup_steps: 1000\n",
-       "       }\n",
-       "     }\n",
-       "     momentum_optimizer_value: 0.8999999761581421\n",
-       "   }\n",
-       "   use_moving_average: false\n",
-       " }\n",
-       " fine_tune_checkpoint: \"PATH_TO_BE_CONFIGURED\"\n",
-       " num_steps: 50000\n",
-       " startup_delay_steps: 0.0\n",
-       " replicas_to_aggregate: 8\n",
-       " max_number_of_boxes: 100\n",
-       " unpad_groundtruth_tensors: false\n",
-       " fine_tune_checkpoint_type: \"classification\"\n",
-       " fine_tune_checkpoint_version: V2,\n",
-       " 'train_input_config': label_map_path: \"PATH_TO_BE_CONFIGURED\"\n",
-       " tf_record_input_reader {\n",
-       "   input_path: \"PATH_TO_BE_CONFIGURED\"\n",
-       " },\n",
-       " 'eval_config': metrics_set: \"coco_detection_metrics\"\n",
-       " use_moving_averages: false,\n",
-       " 'eval_input_configs': [label_map_path: \"PATH_TO_BE_CONFIGURED\"\n",
-       " shuffle: false\n",
-       " num_epochs: 1\n",
-       " tf_record_input_reader {\n",
-       "   input_path: \"PATH_TO_BE_CONFIGURED\"\n",
-       " }\n",
-       " ],\n",
-       " 'eval_input_config': label_map_path: \"PATH_TO_BE_CONFIGURED\"\n",
-       " shuffle: false\n",
-       " num_epochs: 1\n",
-       " tf_record_input_reader {\n",
-       "   input_path: \"PATH_TO_BE_CONFIGURED\"\n",
-       " }}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,34 +502,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "python Tensorflow\\models\\research\\object_detection\\model_main_tf2.py --model_dir=Tensorflow\\workspace\\models\\my_ssd_mobnet --pipeline_config_path=Tensorflow\\workspace\\models\\my_ssd_mobnet\\pipeline.config --num_train_steps=2000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(command)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "^C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!{command}"
    ]
@@ -720,17 +527,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: gin-config in c:\\users\\imran\\.conda\\envs\\ds-c-tfod-01\\lib\\site-packages (0.5.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install gin-config"
    ]
