--- a/2.0 Split images to train-test.ipynb
+++ b/2.0 Split images to train-test.ipynb
@@ -77,24 +77,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1686131616.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    data_folder =\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "class Args:\n",
-    "    data_folder = \"path/to/data\"\n",
-    "    train_folder = \"path/to/train\"\n",
-    "    test_folder = \"path/to/test\"\n",
-    "    split_ratio = 0.8\n",
+    "    data_folder = \"\"  # Set to empty string\n",
+    "    train_folder = \"\"  # Set to empty string\n",
+    "    test_folder = \"\"  # Set to empty string\n",
+    "    split_ratio = 0.8  # Default split ratio (80% for training and 20% for testing)\n",
     "\n",
-    "args = Args()"
+    "    # Function to set default values if folder paths are empty\n",
+    "    def set_defaults(self):\n",
+    "        if not self.data_folder:\n",
+    "            self.data_folder = \"Tensorflow/workspace/images/collectedimages\"  # Default data folder\n",
+    "        if not self.train_folder:\n",
+    "            self.train_folder = \"Tensorflow/workspace/images/train\"  # Default train folder\n",
+    "        if not self.test_folder:\n",
+    "            self.test_folder = \"Tensorflow/workspace/images/test\"  # Default test folder\n",
+    "\n",
+    "# Create an instance of the Args class to store the argument values\n",
+    "args = Args()\n",
+    "args.set_defaults()  # Set default values if folder paths are empty\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'args' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 66\u001b[0m\n\u001b[0;32m     63\u001b[0m     split_and_copy_images(args\u001b[39m.\u001b[39mtrain_folder, args\u001b[39m.\u001b[39mtest_folder, images_by_subfolder, args\u001b[39m.\u001b[39msplit_ratio)\n\u001b[0;32m     64\u001b[0m     logging\u001b[39m.\u001b[39minfo(\u001b[39m\"\u001b[39m\u001b[39mSuccessfully split and copied images and XML files to train and test folders.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 66\u001b[0m main()\n",
+      "Cell \u001b[1;32mIn[4], line 53\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmain\u001b[39m():\n\u001b[0;32m     51\u001b[0m     logging\u001b[39m.\u001b[39mbasicConfig(level\u001b[39m=\u001b[39mlogging\u001b[39m.\u001b[39mINFO)\n\u001b[1;32m---> 53\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mexists(args\u001b[39m.\u001b[39mdata_folder):\n\u001b[0;32m     54\u001b[0m         logging\u001b[39m.\u001b[39merror(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mData folder \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00margs\u001b[39m.\u001b[39mdata_folder\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m does not exist.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     55\u001b[0m         \u001b[39mreturn\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'args' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import shutil\n",
@@ -161,9 +194,15 @@
     "    split_and_copy_images(args.train_folder, args.test_folder, images_by_subfolder, args.split_ratio)\n",
     "    logging.info(\"Successfully split and copied images and XML files to train and test folders.\")\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
