--- a/2.0 Split images to train-test.ipynb
+++ b/2.0 Split images to train-test.ipynb
@@ -76,19 +76,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1686131616.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    data_folder =\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "source": [
+    "Modify the first cell for the \n",
+    "    data_folder, train_folder, test_folder, split_ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "class Args:\n",
     "    data_folder = \"\"  # Set to empty string\n",
@@ -112,19 +112,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'args' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 66\u001b[0m\n\u001b[0;32m     63\u001b[0m     split_and_copy_images(args\u001b[39m.\u001b[39mtrain_folder, args\u001b[39m.\u001b[39mtest_folder, images_by_subfolder, args\u001b[39m.\u001b[39msplit_ratio)\n\u001b[0;32m     64\u001b[0m     logging\u001b[39m.\u001b[39minfo(\u001b[39m\"\u001b[39m\u001b[39mSuccessfully split and copied images and XML files to train and test folders.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 66\u001b[0m main()\n",
-      "Cell \u001b[1;32mIn[4], line 53\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmain\u001b[39m():\n\u001b[0;32m     51\u001b[0m     logging\u001b[39m.\u001b[39mbasicConfig(level\u001b[39m=\u001b[39mlogging\u001b[39m.\u001b[39mINFO)\n\u001b[1;32m---> 53\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mexists(args\u001b[39m.\u001b[39mdata_folder):\n\u001b[0;32m     54\u001b[0m         logging\u001b[39m.\u001b[39merror(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mData folder \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00margs\u001b[39m.\u001b[39mdata_folder\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m does not exist.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     55\u001b[0m         \u001b[39mreturn\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'args' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Copying train images from livelong: 100%|██████████| 4/4 [00:00<00:00, 156.93it/s]\n",
+      "Copying test images from livelong: 100%|██████████| 1/1 [00:00<00:00, 250.17it/s]\n",
+      "Copying train images from thankyou: 100%|██████████| 4/4 [00:00<00:00, 302.35it/s]\n",
+      "Copying test images from thankyou: 100%|██████████| 1/1 [00:00<00:00, 200.01it/s]\n",
+      "Copying train images from thumbsdown: 100%|██████████| 4/4 [00:00<00:00, 269.69it/s]\n",
+      "Copying test images from thumbsdown: 100%|██████████| 1/1 [00:00<00:00, 238.75it/s]\n",
+      "Copying train images from thumbsup: 100%|██████████| 4/4 [00:00<00:00, 283.82it/s]\n",
+      "Copying test images from thumbsup: 100%|██████████| 1/1 [00:00<00:00, 249.84it/s]\n",
+      "INFO:root:Successfully split and copied images and XML files to train and test folders.\n"
      ]
     }
    ],
