--- a/3.0 test.ipynb
+++ b/3.0 test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,33 +316,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Missing values found in the 'relative_path' column:\n",
+      "XML data:\n",
       "                                             filename  ...  relative_path\n",
-      "0   livelong.e22426fd-c2d9-11ed-b77e-44af2861d338.jpg  ...            NaN\n",
-      "1   livelong.e53ddbe0-c2d9-11ed-93c8-44af2861d338.jpg  ...            NaN\n",
-      "2   livelong.e867d8af-c2d9-11ed-9d1a-44af2861d338.jpg  ...            NaN\n",
-      "3   livelong.eb8f4e23-c2d9-11ed-90ee-44af2861d338.jpg  ...            NaN\n",
-      "4   thankyou.cbe118c6-c2d9-11ed-9498-44af2861d338.jpg  ...            NaN\n",
-      "5   thankyou.cf10edea-c2d9-11ed-8d86-44af2861d338.jpg  ...            NaN\n",
-      "6   thankyou.d2344614-c2d9-11ed-808a-44af2861d338.jpg  ...            NaN\n",
-      "7   thankyou.d8818e4e-c2d9-11ed-bd24-44af2861d338.jpg  ...            NaN\n",
-      "8   thumbsdown.bbd72d13-c2d9-11ed-a29a-44af2861d33...  ...            NaN\n",
-      "9   thumbsdown.bef3a66f-c2d9-11ed-ad54-44af2861d33...  ...            NaN\n",
-      "10  thumbsdown.c2101978-c2d9-11ed-9c81-44af2861d33...  ...            NaN\n",
-      "11  thumbsdown.c52afd56-c2d9-11ed-9d1d-44af2861d33...  ...            NaN\n",
-      "12  thumbsup.a19170e7-c2d9-11ed-83cc-44af2861d338.jpg  ...            NaN\n",
-      "13  thumbsup.a4be32cf-c2d9-11ed-8df0-44af2861d338.jpg  ...            NaN\n",
-      "14  thumbsup.ab151dd7-c2d9-11ed-8b3c-44af2861d338.jpg  ...            NaN\n",
-      "15  thumbsup.ae4218dc-c2d9-11ed-ae3a-44af2861d338.jpg  ...            NaN\n",
+      "0   livelong.e22426fd-c2d9-11ed-b77e-44af2861d338.jpg  ...       livelong\n",
+      "1   livelong.e53ddbe0-c2d9-11ed-93c8-44af2861d338.jpg  ...       livelong\n",
+      "2   livelong.e867d8af-c2d9-11ed-9d1a-44af2861d338.jpg  ...       livelong\n",
+      "3   livelong.eb8f4e23-c2d9-11ed-90ee-44af2861d338.jpg  ...       livelong\n",
+      "4   thankyou.cbe118c6-c2d9-11ed-9498-44af2861d338.jpg  ...       thankyou\n",
+      "5   thankyou.cf10edea-c2d9-11ed-8d86-44af2861d338.jpg  ...       thankyou\n",
+      "6   thankyou.d2344614-c2d9-11ed-808a-44af2861d338.jpg  ...       thankyou\n",
+      "7   thankyou.d8818e4e-c2d9-11ed-bd24-44af2861d338.jpg  ...       thankyou\n",
+      "8   thumbsdown.bbd72d13-c2d9-11ed-a29a-44af2861d33...  ...     thumbsdown\n",
+      "9   thumbsdown.bef3a66f-c2d9-11ed-ad54-44af2861d33...  ...     thumbsdown\n",
+      "10  thumbsdown.c2101978-c2d9-11ed-9c81-44af2861d33...  ...     thumbsdown\n",
+      "11  thumbsdown.c52afd56-c2d9-11ed-9d1d-44af2861d33...  ...     thumbsdown\n",
+      "12  thumbsup.a19170e7-c2d9-11ed-83cc-44af2861d338.jpg  ...       thumbsup\n",
+      "13  thumbsup.a4be32cf-c2d9-11ed-8df0-44af2861d338.jpg  ...       thumbsup\n",
+      "14  thumbsup.ab151dd7-c2d9-11ed-8b3c-44af2861d338.jpg  ...       thumbsup\n",
+      "15  thumbsup.ae4218dc-c2d9-11ed-ae3a-44af2861d338.jpg  ...       thumbsup\n",
       "\n",
-      "[16 rows x 9 columns]\n"
+      "[16 rows x 9 columns]\n",
+      "XML data:\n",
+      "                                            filename  width  ...  ymax relative_path\n",
+      "0  livelong.dee6de10-c2d9-11ed-a0f6-44af2861d338.jpg    320  ...   165      livelong\n",
+      "1  thankyou.d565868f-c2d9-11ed-b2f6-44af2861d338.jpg    320  ...   163      thankyou\n",
+      "2  thumbsdown.b8b11997-c2d9-11ed-be73-44af2861d33...    320  ...   203    thumbsdown\n",
+      "3  thumbsup.a7eb0504-c2d9-11ed-abfa-44af2861d338.jpg    320  ...   165      thumbsup\n",
+      "\n",
+      "[4 rows x 9 columns]\n",
+      "Filename: livelong.e22426fd-c2d9-11ed-b77e-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\train, Image Dir: Tensorflow\\workspace\\images\\train, Relative Path: .\n",
+      "Filename: livelong.e53ddbe0-c2d9-11ed-93c8-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\train, Image Dir: Tensorflow\\workspace\\images\\train, Relative Path: .\n",
+      "Filename: livelong.e867d8af-c2d9-11ed-9d1a-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\train, Image Dir: Tensorflow\\workspace\\images\\train, Relative Path: .\n",
+      "Filename: livelong.eb8f4e23-c2d9-11ed-90ee-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\train, Image Dir: Tensorflow\\workspace\\images\\train, Relative Path: .\n",
+      "Filename: thankyou.cbe118c6-c2d9-11ed-9498-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\train, Image Dir: Tensorflow\\workspace\\images\\train, Relative Path: .\n",
+      "Filename: thankyou.cf10edea-c2d9-11ed-8d86-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\train, Image Dir: Tensorflow\\workspace\\images\\train, Relative Path: .\n",
+      "Filename: thankyou.d2344614-c2d9-11ed-808a-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\train, Image Dir: Tensorflow\\workspace\\images\\train, Relative Path: .\n",
+      "Filename: thankyou.d8818e4e-c2d9-11ed-bd24-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\train, Image Dir: Tensorflow\\workspace\\images\\train, Relative Path: .\n",
+      "Filename: thumbsdown.bbd72d13-c2d9-11ed-a29a-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\train, Image Dir: Tensorflow\\workspace\\images\\train, Relative Path: .\n",
+      "Filename: thumbsdown.bef3a66f-c2d9-11ed-ad54-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\train, Image Dir: Tensorflow\\workspace\\images\\train, Relative Path: .\n",
+      "Filename: thumbsdown.c2101978-c2d9-11ed-9c81-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\train, Image Dir: Tensorflow\\workspace\\images\\train, Relative Path: .\n",
+      "Filename: thumbsdown.c52afd56-c2d9-11ed-9d1d-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\train, Image Dir: Tensorflow\\workspace\\images\\train, Relative Path: .\n",
+      "Filename: thumbsup.a19170e7-c2d9-11ed-83cc-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\train, Image Dir: Tensorflow\\workspace\\images\\train, Relative Path: .\n",
+      "Filename: thumbsup.a4be32cf-c2d9-11ed-8df0-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\train, Image Dir: Tensorflow\\workspace\\images\\train, Relative Path: .\n",
+      "Filename: thumbsup.ab151dd7-c2d9-11ed-8b3c-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\train, Image Dir: Tensorflow\\workspace\\images\\train, Relative Path: .\n",
+      "Filename: thumbsup.ae4218dc-c2d9-11ed-ae3a-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\train, Image Dir: Tensorflow\\workspace\\images\\train, Relative Path: .\n",
+      "Filename: livelong.dee6de10-c2d9-11ed-a0f6-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\test, Image Dir: Tensorflow\\workspace\\images\\test, Relative Path: .\n",
+      "Filename: thankyou.d565868f-c2d9-11ed-b2f6-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\test, Image Dir: Tensorflow\\workspace\\images\\test, Relative Path: .\n",
+      "Filename: thumbsdown.b8b11997-c2d9-11ed-be73-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\test, Image Dir: Tensorflow\\workspace\\images\\test, Relative Path: .\n",
+      "Filename: thumbsup.a7eb0504-c2d9-11ed-abfa-44af2861d338.jpg, XML Dir: Tensorflow\\workspace\\images\\test, Image Dir: Tensorflow\\workspace\\images\\test, Relative Path: .\n"
      ]
     },
     {
@@ -350,13 +378,19 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"e:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\scripts\\xml_to_tfrecord.py\", line 175, in <module>\n",
+      "  File \"e:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\scripts\\xml_to_tfrecord.py\", line 196, in <module>\n",
       "    generate_tfrecords(args.train_image_dir, os.path.join(args.output_dir, 'train_labels.csv'), os.path.join(args.output_dir, 'train.record'))\n",
-      "  File \"e:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\scripts\\xml_to_tfrecord.py\", line 143, in generate_tfrecords\n",
-      "    group_data = grouped.get_group(group_keys) if not pd.isna(group_keys[1]) else grouped.get_group((group_keys[0],))\n",
-      "  File \"C:\\Users\\Imran\\.conda\\envs\\ds-c-tfod-01\\lib\\site-packages\\pandas\\core\\groupby\\groupby.py\", line 817, in get_group\n",
-      "    raise KeyError(name)\n",
-      "KeyError: ('livelong.e22426fd-c2d9-11ed-b77e-44af2861d338.jpg',)\n"
+      "  File \"e:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\scripts\\xml_to_tfrecord.py\", line 148, in generate_tfrecords\n",
+      "    tf_example = create_tf_example(row, image_dir)\n",
+      "  File \"e:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\scripts\\xml_to_tfrecord.py\", line 93, in create_tf_example\n",
+      "    encoded_jpg = fid.read()\n",
+      "  File \"C:\\Users\\Imran\\AppData\\Roaming\\Python\\Python310\\site-packages\\tensorflow\\python\\lib\\io\\file_io.py\", line 114, in read\n",
+      "    self._preread_check()\n",
+      "  File \"C:\\Users\\Imran\\AppData\\Roaming\\Python\\Python310\\site-packages\\tensorflow\\python\\lib\\io\\file_io.py\", line 76, in _preread_check\n",
+      "    self._read_buf = _pywrap_file_io.BufferedInputStream(\n",
+      "tensorflow.python.framework.errors_impl.NotFoundError: NewRandomAccessFile failed to Create/Open: Tensorflow\\workspace\\images\\train\\.\\livelong.e22426fd-c2d9-11ed-b77e-44af2861d338.jpg : The system cannot find the file specified.\n",
+      "\n",
+      "; No such file or directory\n"
      ]
     }
    ],
