--- a/0.0 Testing GPU.ipynb
+++ b/0.0 Testing GPU.ipynb
@@ -42,29 +42,20 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 3) (2870563684.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    print('Default GPU Device:\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 3)\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default GPU Device: /device:GPU:0\n"
      ]
     }
    ],
    "source": [
     "import tensorflow as tf \n",
     "if tf.test.gpu_device_name(): \n",
-    "    print('Default GPU Device:\n",
-    "    {}'.format(tf.test.gpu_device_name()))\n",
+    "    print('Default GPU Device: {}'.format(tf.test.gpu_device_name()))\n",
     "else:\n",
     "   print(\"Please install GPU version of TF\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
