--- a/0.0 Testing GPU.ipynb
+++ b/0.0 Testing GPU.ipynb
@@ -9,13 +9,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor Flow Version: 2.11.0\n",
-      "Keras Version: 2.11.0\n",
+      "Tensor Flow Version: 2.10.1\n",
+      "Keras Version: 2.10.0\n",
       "\n",
-      "Python 3.7.16 (default, Jan 17 2023, 16:06:28) [MSC v.1916 64 bit (AMD64)]\n",
-      "Pandas 1.3.5\n",
-      "Scikit-Learn 1.0.2\n",
-      "GPU is NOT AVAILABLE\n"
+      "Python 3.8.16 (default, Mar  2 2023, 03:18:16) [MSC v.1916 64 bit (AMD64)]\n",
+      "Pandas 1.5.3\n",
+      "Scikit-Learn 1.2.1\n",
+      "GPU is available\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please install GPU version of TF\n"
+      "Default GPU Device: /device:GPU:0\n"
      ]
     }
    ],
@@ -56,13 +56,6 @@
     "else:\n",
     "   print(\"Please install GPU version of TF\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
