--- a/2.0 Split images to train-test.ipynb
+++ b/2.0 Split images to train-test.ipynb
@@ -64,7 +64,8 @@
     "## Notes\n",
     "\n",
     "- Make sure the input data folder contains subfolders with images and their corresponding XML files.\n",
-    "- The script will create the train and test folders if they don't already exist.\n"
+    "- The script will create the train and test folders if they don't already exist.\n",
+    "- This script does not consider that if you have already split the data and add new data into collected images file"
    ]
   },
   {
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,21 +113,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Copying train images from livelong: 100%|██████████| 4/4 [00:00<00:00, 156.93it/s]\n",
-      "Copying test images from livelong: 100%|██████████| 1/1 [00:00<00:00, 250.17it/s]\n",
-      "Copying train images from thankyou: 100%|██████████| 4/4 [00:00<00:00, 302.35it/s]\n",
-      "Copying test images from thankyou: 100%|██████████| 1/1 [00:00<00:00, 200.01it/s]\n",
-      "Copying train images from thumbsdown: 100%|██████████| 4/4 [00:00<00:00, 269.69it/s]\n",
-      "Copying test images from thumbsdown: 100%|██████████| 1/1 [00:00<00:00, 238.75it/s]\n",
-      "Copying train images from thumbsup: 100%|██████████| 4/4 [00:00<00:00, 283.82it/s]\n",
-      "Copying test images from thumbsup: 100%|██████████| 1/1 [00:00<00:00, 249.84it/s]\n",
+      "Copying train images from livelong: 100%|██████████| 8/8 [00:00<00:00, 104.37it/s]\n",
+      "Copying test images from livelong: 100%|██████████| 2/2 [00:00<00:00, 199.40it/s]\n",
+      "Copying train images from thankyou: 100%|██████████| 8/8 [00:00<00:00, 218.93it/s]\n",
+      "Copying test images from thankyou: 100%|██████████| 2/2 [00:00<00:00, 249.97it/s]\n",
+      "Copying train images from thumbsdown: 100%|██████████| 8/8 [00:00<00:00, 245.89it/s]\n",
+      "Copying test images from thumbsdown: 100%|██████████| 2/2 [00:00<00:00, 234.92it/s]\n",
+      "Copying train images from thumbsup: 100%|██████████| 8/8 [00:00<00:00, 245.84it/s]\n",
+      "Copying test images from thumbsup: 100%|██████████| 2/2 [00:00<00:00, 210.26it/s]\n",
       "INFO:root:Successfully split and copied images and XML files to train and test folders.\n"
      ]
     }
@@ -199,6 +200,13 @@
     "\n",
     "main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -217,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
