--- a/2.1 split images (alternative).ipynb
+++ b/2.1 split images (alternative).ipynb
@@ -1,8 +1,116 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Notes\n",
+    "\n",
+    "- This script consideres the images that you've already split. but you still need to use this one exclusively. if you have used 2.0 this script wouldn't track the file split\n",
+    "- this script will generate a "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Image Dataset Splitter\n",
+    "This script helps you split an image dataset into training and testing sets. It works with image files (.jpg) and their corresponding annotation files (.xml).\n",
+    "\n",
+    "# Usage\n",
+    "1. Place your image dataset into a folder, with each subfolder containing images of a specific category. This is automatically done if you've used 1.0 Image..."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "data_folder\n",
+    "├── category1\n",
+    "│   ├── image1.jpg\n",
+    "│   ├── image1.xml\n",
+    "│   ├── image2.jpg\n",
+    "│   └── image2.xml\n",
+    "├── category2\n",
+    "│   ├── image3.jpg\n",
+    "│   ├── image3.xml\n",
+    "│   ├── image4.jpg\n",
+    "│   └── image4.xml\n",
+    "└── category3\n",
+    "    ├── image5.jpg\n",
+    "    ├── image5.xml\n",
+    "    ├── image6.jpg\n",
+    "    └── image6.xml"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Modify the Args class instance in the script to set your custom folder paths and split ratio (if necessary):"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "args = Args()\n",
+    "args.data_folder = \"your_data_folder_path\"  # Replace with your data folder path\n",
+    "args.train_folder = \"your_train_folder_path\"  # Replace with your train folder path\n",
+    "args.test_folder = \"your_test_folder_path\"  # Replace with your test folder path\n",
+    "args.split_ratio = 0.8  # Default split ratio (80% for training and 20% for testing)\n",
+    "args.set_defaults()  # Set default values if folder paths are empty"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Run the script\n",
+    "\n",
+    "The script will copy the images and their corresponding annotation files into the train and test folders, maintaining the original folder structure"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "train_folder\n",
+    "├── category1\n",
+    "│   ├── image1.jpg\n",
+    "│   ├── image1.xml\n",
+    "│   ├── image2.jpg\n",
+    "│   └── image2.xml\n",
+    "├── category2\n",
+    "│   ├── image3.jpg\n",
+    "│   ├── image3.xml\n",
+    "│   ├── image4.jpg\n",
+    "│   └── image4.xml\n",
+    "└── category3\n",
+    "    ├── image5.jpg\n",
+    "    ├── image5.xml\n",
+    "    ├── image6.jpg\n",
+    "    └── image6.xml"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code below:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +136,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Copying train images from livelong: 100%|██████████| 8/8 [00:00<00:00, 168.60it/s]\n",
+      "Copying test images from livelong: 100%|██████████| 2/2 [00:00<00:00, 235.17it/s]\n",
+      "Copying train images from thankyou: 100%|██████████| 8/8 [00:00<00:00, 239.25it/s]\n",
+      "Copying test images from thankyou: 100%|██████████| 2/2 [00:00<00:00, 234.96it/s]\n",
+      "Copying train images from thumbsdown: 100%|██████████| 8/8 [00:00<00:00, 265.82it/s]\n",
+      "Copying test images from thumbsdown: 100%|██████████| 2/2 [00:00<00:00, 266.31it/s]\n",
+      "Copying train images from thumbsup: 100%|██████████| 8/8 [00:00<00:00, 241.05it/s]\n",
+      "Copying test images from thumbsup: 100%|██████████| 2/2 [00:00<00:00, 242.50it/s]\n",
+      "INFO:root:Successfully split and copied images and XML files to train and test folders.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import shutil\n",
@@ -113,7 +237,7 @@
     "def main():\n",
     "    logging.basicConfig(level=logging.INFO)\n",
     "\n",
-    "    args = parse_arguments()\n",
+    "    # args = parse_arguments()  #not using\n",
     "\n",
     "    if not os.path.exists(args.data_folder):\n",
     "        logging.error(f\"Data folder '{args.data_folder}' does not exist.\")\n",
@@ -132,13 +256,6 @@
     "if __name__ == \"__main__\":\n",
     "    main()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -148,8 +265,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.9"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.16"
   },
   "orig_nbformat": 4
  },
